2003-08-06  Richard Williamson   <rjw@apple.com>

	Fixed 3348630.  Pick up about 1% by moving implementation of _unicodeDirection to WebCore and inlining.

        Reviewed by Ken.

        * WebCore-combined.exp:
        * WebCore.exp:
        * WebCore.pbproj/project.pbxproj:
        * kwq/KWQString.h:
        * kwq/WebCoreUnicode.cpp:
        * kwq/WebCoreUnicode.h:

2003-08-06  John Sullivan  <sullivan@apple.com>

	- fixed 3366587 -- Mail quits instantly (no crashlog) trying
	to reply to a particular message

        Reviewed by Richard

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::attributedString):
	Return nil immediately if startNode is nil.

2003-08-06  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Chris Blumenberg.

	- fixed 3366173 - crash in DOM::DomShared::ref loading www.berkheiser.net
	
        * khtml/ecma/kjs_html.cpp:
        (Image::putValue): Check for NULL before refing, because we set
	onLoadListener with a function that returns NULL if passed a value
	that's not a function.

2003-08-06  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin and Dave.

	- fixed 3364433 - repro crash in khtml::RenderBlock::nodeAtPoint
	
        * khtml/rendering/render_object.cpp:
        (RenderObject::removeFromObjectLists): When finding the right
	parent block to remove a float from, don't stop at floating or
	positioned elements. They could well have floats in their
	m_floatingObjects list due to overhang, and failing to remove them
	leads to crashes.

2003-08-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

        * kwq/KWQPainter.mm:
        (QPainter::drawLine): Print a warning in debug builds when drawing
	a dashed line. Also, revert accidental commenting of lines that
	set the dash style.

2003-08-04  Dave Hyatt  <hyatt@apple.com>

	Fix for 3127909, copied text matched the document source instead of the
	rendered HTML.  This patch makes sure that the TextRuns are walked instead