@@ -23,7 +23,8 @@ _WebCoreUnicodeMirroredFunction
 _WebCoreUnicodeUpperFunction
 _WebCoreInitializeTextRun
 _WebCoreInitializeEmptyTextStyle
-_WebCoreDirectionInfo__ZN10KWQMapImpl11endInternalEv
+_WebCoreDirectionInfo
+__ZN10KWQMapImpl11endInternalEv
 __ZN10KWQMapImpl13beginInternalEv
 __ZN10KWQMapImpl13clearInternalEv
 __ZN10KWQMapImpl14insertInternalEP14KWQMapNodeImplb
